# openagent-harness

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: release.yml
agents/: builder-junior.md  builder.md  consultant.md  debugger.md  docs-writer.md  explorer.md  orchestrator.md  planner.md  researcher.md  reviewer.md  vision.md
agents/agents/: builder-junior.md  builder.md  consultant.md  debugger.md  docs-writer.md  explorer.md  orchestrator.md  planner.md  researcher.md  reviewer.md  vision.md
modelfiles/: Modelfile.builder  Modelfile.docs  Modelfile.junior  Modelfile.vision
plugin/: client.test.ts  client.ts  dag.test.ts  dag.ts  errors.test.ts  errors.ts  harness.ts  package.json  plans.test.ts  plans.ts  tsconfig.json  types.ts  wasm.test.ts
plugin/wasm/: .gitignore  openagent_harness.d.ts  openagent_harness.js  openagent_harness_bg.wasm  openagent_harness_bg.wasm.d.ts
skills/caveman/: SKILL.md
src/: acp.rs  agents.rs  dag.rs  events.rs  install.rs  lib.rs  main.rs  server.rs  skills.rs  tmux.rs  types.rs
