[package]
name = "openagent-harness"
version = "0.1.0"
edition = "2024"

# cdylib  → wasm-pack builds the .wasm file
# rlib    → the native install binary links against this lib
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "openagent-harness"
path = "src/main.rs"

# ── Shared (both targets) ──────────────────────────────────────────────────────
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── WASM-only ─────────────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
uuid = { version = "1", features = ["v4", "js"] }

# ── Native-only (install binary + tests) ──────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1", features = ["v4"] }
dirs = "5"
anyhow = "1"
